plugins/regulus-k8/scripts/examples/networkpolicy/bb_back2.yml
apiVersion: v1
kind: Pod
metadata:
  name: back2
#  namespace: a-namespace
  labels:
    role: backend
spec:
  containers:
    - image: busybox
      imagePullPolicy: IfNotPresent
      name: busybox
      tty: true
      stdin: true
