plugins/regulus-k8/scripts/examples/networkpolicy/bb_front2.yml
apiVersion: v1
kind: Pod
metadata:
  name: front2
#  namespace: a-namespace
  labels:
    role: frontend
spec:
  containers:
    - image: busybox
      imagePullPolicy: IfNotPresent
      name: busybox
      tty: true
      stdin: true
