plugins/regulus-k8/scripts/examples/networkpolicy/allow-ingress-from-b-ns.yml
kind: NetworkPolicy
apiVersion: extensions/v1beta1 
metadata:
  namespace: a-namespace
  name: frontend-policy
spec:
  podSelector:
    matchLabels:
      role: frontend 
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: b-namespace
      ports:
        - protocol: TCP
          port: 80
