plugins/regulus-k8/scripts/examples/networkpolicy/backend-policy-udp.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  namespace: a-namespace
  name: backend-policy-udp
spec:
  podSelector:
    matchLabels:
      role: backend
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: frontend
      ports:
        - protocol: UDP
          port: 11000
