plugins/regulus-k8/scripts/examples/networkpolicy/backend-policy.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: backend-policy-tcp
spec:
  podSelector:
    matchLabels:
      role: backend
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: frontend
      ports:
        - protocol: TCP
          port: 12000
