plugins/regulus-k8/scripts/examples/networkpolicy/tcp80-udp50-backend-policy.yml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: tcp80-udp50-backend-policy
spec:
  podSelector:
    matchLabels:
      role: backend
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: frontend
      ports:
        - protocol: TCP
          port: 80
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: frontend
      ports:
        - protocol: UDP
          port: 50
